# MLEgg

./: .gitignore  LICENSE  README.md  flake.nix  out.gv  out2.gv
egg/: .gitignore  Cargo.toml
egg/src/: expr.rs  graph.rs  main.rs  mlir.rs  tutorial.rs
mlir-test/: a.out  basic.ll  basic.mlir  basic2.c  basic2.ll  basic2.mlir
papers/: paper-list.md
presentations/: about-me.md  weekly-presentation.md
project/: .gitignore  CMakeLists.txt
project/include/Support/: Graph.h
project/include/Transform/Linalg/: EqualitySaturationPass.h
project/lib/: CMakeLists.txt
project/lib/Support/: CMakeLists.txt  Graph.cpp
project/lib/Transform/: CMakeLists.txt
project/lib/Transform/Linalg/: CMakeLists.txt  EqualitySaturationPass.cpp
project/mlir/: linalg-test-1.mlir
project/tools/: CMakeLists.txt  EqualitySaturationPass.cpp  es-opt.cpp
test/: ex_with_new_ids.txt  linalg-result-1.mlir  linalg-result-2.mlir  linalg-result-3.mlir  linalg-result-add.mlir  linalg-result-associativity.mlir  linalg-result-broadcast.mlir  linalg-result-composite.mlir  linalg-result-dot.mlir  linalg-result-matmul.mlir  linalg-result-rules.mlir  linalg-test-2.mlir  linalg-test-3.mlir  linalg-test-add.mlir  linalg-test-associativity.mlir  linalg-test-broadcast.mlir  linalg-test-composite-rules.mlir  linalg-test-dot.mlir  linalg-test-dot2.mlir  linalg-test-matmul.mlir  linalg-test-rules.mlir  out.gv  out2.gv  syntaxt for writing generic op using builder.cpp
